Fix invisible table header links

--- a/we_universal/theme/common.css
+++ b/we_universal/theme/common.css
@@ -164,7 +164,7 @@ a:active {
  * Forum name and description
  */
 .inventea-sitename {
-	padding: 70px 50px 92px;
+	padding: 70px 50px 96px;
 	color: #fff;
 	font-size: 14px;
 }
